--- a/service/src/main/webapp/forEmployee.html
+++ b/service/src/main/webapp/forEmployee.html
@@ -580,26 +580,27 @@
                 return arr[val];
             },
             dateFormat: function (value) {
-                let fmt = 'yyyy-MM-dd hh:mm:ss';
-                let getDate = new Date(value);
-                let o = {
-                    'M+': getDate.getMonth() + 1,
-                    'd+': getDate.getDate(),
-                    'h+': getDate.getHours(),
-                    'm+': getDate.getMinutes(),
-                    's+': getDate.getSeconds(),
-                    'q+': Math.floor((getDate.getMonth() + 3) / 3),
-                    'S': getDate.getMilliseconds()
-                };
-                if (/(y+)/.test(fmt)) {
-                    fmt = fmt.replace(RegExp.$1, (getDate.getFullYear() + '').substr(4 - RegExp.$1.length))
-                }
-                for (let k in o) {
-                    if (new RegExp('(' + k + ')').test(fmt)) {
-                        fmt = fmt.replace(RegExp.$1, (RegExp.$1.length === 1) ? (o[k]) : (('00' + o[k]).substr(('' + o[k]).length)))
-                    }
-                }
-                return fmt;
+                return value;
+            //     let fmt = 'yyyy-MM-dd hh:mm:ss';
+            //     let getDate = new Date(value);
+            //     let o = {
+            //         'M+': getDate.getMonth() + 1,
+            //         'd+': getDate.getDate(),
+            //         'h+': getDate.getHours(),
+            //         'm+': getDate.getMinutes(),
+            //         's+': getDate.getSeconds(),
+            //         'q+': Math.floor((getDate.getMonth() + 3) / 3),
+            //         'S': getDate.getMilliseconds()
+            //     };
+            //     if (/(y+)/.test(fmt)) {
+            //         fmt = fmt.replace(RegExp.$1, (getDate.getFullYear() + '').substr(4 - RegExp.$1.length))
+            //     }
+            //     for (let k in o) {
+            //         if (new RegExp('(' + k + ')').test(fmt)) {
+            //             fmt = fmt.replace(RegExp.$1, (RegExp.$1.length === 1) ? (o[k]) : (('00' + o[k]).substr(('' + o[k]).length)))
+            //         }
+            //     }
+            //     return fmt;
             }
         },
         created() {
@@ -764,7 +765,7 @@
             //http://localhost:8080/letterVisist/queryUserId?code=1
             queryUserId() {
                 const vm = this;
-                let code = !!this.getQueryString("code") ? his.getQueryString("code") : "XHO49LB6t8N7UqBpKBWlMbCOyX-PiT-ucy6p7whaTSc";
+                let code = !!this.getQueryString("code") ? this.getQueryString("code") : "XHO49LB6t8N7UqBpKBWlMbCOyX-PiT-ucy6p7whaTSc";
                 axios.get('letterVisist/queryUserId?type=LV&code='+code).then(function (response) {
                     // vueBus.$emit("info", "succOpen");
                     if(response.status == 200 && response.data.resultCode == 0){
