--- a/service/src/main/webapp/forLeader.html
+++ b/service/src/main/webapp/forLeader.html
@@ -335,26 +335,28 @@
                 return arr[val];
             },
             dateFormat: function (value) {
-                let fmt = 'yyyy-MM-dd hh:mm:ss';
-                let getDate = new Date(value);
-                let o = {
-                    'M+': getDate.getMonth() + 1,
-                    'd+': getDate.getDate(),
-                    'h+': getDate.getHours(),
-                    'm+': getDate.getMinutes(),
-                    's+': getDate.getSeconds(),
-                    'q+': Math.floor((getDate.getMonth() + 3) / 3),
-                    'S': getDate.getMilliseconds()
-                };
-                if (/(y+)/.test(fmt)) {
-                    fmt = fmt.replace(RegExp.$1, (getDate.getFullYear() + '').substr(4 - RegExp.$1.length))
-                }
-                for (let k in o) {
-                    if (new RegExp('(' + k + ')').test(fmt)) {
-                        fmt = fmt.replace(RegExp.$1, (RegExp.$1.length === 1) ? (o[k]) : (('00' + o[k]).substr(('' + o[k]).length)))
-                    }
-                }
-                return fmt;
+                return value;
+
+                // let fmt = 'yyyy-MM-dd hh:mm:ss';
+                // let getDate = new Date(value);
+                // let o = {
+                //     'M+': getDate.getMonth() + 1,
+                //     'd+': getDate.getDate(),
+                //     'h+': getDate.getHours(),
+                //     'm+': getDate.getMinutes(),
+                //     's+': getDate.getSeconds(),
+                //     'q+': Math.floor((getDate.getMonth() + 3) / 3),
+                //     'S': getDate.getMilliseconds()
+                // };
+                // if (/(y+)/.test(fmt)) {
+                //     fmt = fmt.replace(RegExp.$1, (getDate.getFullYear() + '').substr(4 - RegExp.$1.length))
+                // }
+                // for (let k in o) {
+                //     if (new RegExp('(' + k + ')').test(fmt)) {
+                //         fmt = fmt.replace(RegExp.$1, (RegExp.$1.length === 1) ? (o[k]) : (('00' + o[k]).substr(('' + o[k]).length)))
+                //     }
+                // }
+                // return fmt;
             }
         },
         created() {
@@ -423,7 +425,7 @@
             queryUserId() {
                 // EM:信访管理,LV:信访平台
                 const vm = this;
-                let code = !!this.getQueryString("code") ? his.getQueryString("code") : "gHpwe12SK2OKsahI8e39HjOy9Zpf6FJ_gblQsy5cdzs";
+                let code = !!this.getQueryString("code") ? this.getQueryString("code") : "gHpwe12SK2OKsahI8e39HjOy9Zpf6FJ_gblQsy5cdzs";
                 axios.get('letterVisist/queryUserId?type=EM&code='+code).then(function (response) {
                     // vueBus.$emit("info", "succOpen");
                     if(response.status == 200 && response.data.resultCode == 0){
